# avrm

./: .gitignore  README.md
arduino-mk/: README.md
arduino-mk/blink/: Makefile
arduino_cmake/: CMakeLists.txt  README.md
arduino_cmake/lib/: CMakeLists.txt
arduino_cmake/lib/boards/: reset_gpio.sh
arduino_cmake/lib/core/: CMakeLists.txt  main.cpp
arduino_cmake/lib/custom/: CMakeLists.txt
arduino_cmake/lib/custom/IRremote/: IRremoteInt.h
arduino_cmake/lib/custom/Ping/: Ping.cpp  Ping.h  keywords.txt
arduino_cmake/lib/custom/Ping/examples/Ping_Library_Example/: Ping_Library_Example.pde
arduino_cmake/lib/default/: CMakeLists.txt
arduino_cmake/lib/default/Esplora/: Esplora.cpp
arduino_cmake/lib/default/SoftwareSerial/: SoftwareSerial.cpp
arduino_cmake/projects/: CMakeLists.txt  generic.cmake
arduino_cmake/projects/blinky/: CMakeLists.txt  blinky.cpp
arduino_cmake/projects/combined/: CMakeLists.txt  blinker.cpp  blinker.h  combined.cpp  test.c  test.h
arduino_cmake/projects/i2cslave/: CMakeLists.txt  i2cslave.cpp
arduino_cmake/projects/keyboard/: CMakeLists.txt  keyboard.cpp
arduino_cmake/projects/ping/: CMakeLists.txt  ping.cpp
arduino_cmake/projects/tinybasic/: CMakeLists.txt  tinybasic.cpp
arduino_make/: Makefile
arduino_make/src/: main.cpp
asm-avrm328/: Makefile  main.asm
avrm-setup/: README.md  setup
avrm-setup/install/arduino/: boards.txt
avrm-setup/install/avrm/: avrm  avrm.cfg
avrm-setup/test/: Makefile  blinky.c
cduino-1.2.0/: .Makefile.swp  README.md  generic.mk
cduino-1.2.0/wireless_xbee/: a.out  core
cduino-1.2.0/xlinked_source_html/: accelerometer.c.html  accelerometer.h.html  accelerometer_test.c.html  adc.c.html  adc.h.html  adc_test.c.html  blink.c.html  dc_motor.c.html  dc_motor.h.html  dc_motor_test.c.html  dio.h.html  dio_test.c.html  lcd.c.html  lcd.h.html  lcd_keypad.c.html  lcd_keypad.h.html  lcd_keypad_test.c.html  lcd_test.c.html  lesson1.c.html  lesson10.c.html  lesson11.c.html  lesson12.c.html  lesson2.c.html  lesson3.c.html  lesson4.c.html  lesson5.c.html  lesson6.c.html  lesson7a.c.html  lesson7b.c.html  lesson8.c.html  lesson9.c.html  lis331dlh_driver_private.c.html  lis331dlh_driver_private.h.html  one_wire_master.c.html  one_wire_master.h.html  one_wire_master_test.c.html  random_id_test.c.html  sd_card.c.html  sd_card.h.html  sd_card_private.h.html  (+17 more)
libavrm328/: Makefile  adc.c  adc.h  buttons.c  buttons.h  i2c.c  i2c.h  leds.c  leds.h  main.c  spi.c  spi.h  timers.c  timers.h  uart.c  uart.h
libavrm328/i2c_client_master/: Makefile  main.c
libavrm328/spi_client_master/: Makefile  common.c  main.c  spi.c  spi.h
lufa-avrm32u4/firmware/Keyboard/: makefile
lufa-avrm32u4/firmware/USBtoSerial/: makefile
